--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -1,4 +1,4 @@
-.dropup,
+/*.dropup,
 .dropdown {
   position: relative;
 }
@@ -224,4 +224,4 @@
 .dropdown .dropdown-menu .nav-header {
   padding-right: 20px;
   padding-left: 20px;
-}
+}*/
