--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -69,3 +69,7 @@
      -moz-border-radius: 6px 0 6px 6px;
           border-radius: 6px 0 6px 6px;
 }
+
+.dropdown-button > i {
+    margin-right: 8px;
+}
