css-bootstrap/dropdown.css

--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -66,13 +66,13 @@
   float: none !important;
 }
 
-.dropdown-submenu.pull-left > .dropdown-menu {
+/*.dropdown-submenu.pull-left > .dropdown-menu {
   left: -100%;
   margin-left: 10px;
   -webkit-border-radius: 6px 0 6px 6px;
      -moz-border-radius: 6px 0 6px 6px;
           border-radius: 6px 0 6px 6px;
-}
+}*/
 
 .dropdown-button > i {
     margin-right: 10px;
