css-bootstrap/dropdown.css

--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -77,3 +77,13 @@
 .dropdown-button > i {
     margin-right: 10px;
 }
+
+.dropdown-menu.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.pull-right > .dropdown-menu {
+  right: 0;
+  left: auto;
+}
