css-bootstrap/dropdown.css

--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -1,4 +1,4 @@
-.dropdown-submenu:hover > a,
+/*.dropdown-submenu:hover > a,
 .dropdown-submenu:focus > a {
   color: #ffffff;
   text-decoration: none;
@@ -76,4 +76,4 @@
 
 .dropdown-button > i {
     margin-right: 10px;
-}
+}*/
