--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -67,7 +67,7 @@
 }
 
 .dropdown-submenu.pull-left > .dropdown-menu {
-  left: auto;
+  left: -100%;
   margin-left: 10px;
   -webkit-border-radius: 6px 0 6px 6px;
      -moz-border-radius: 6px 0 6px 6px;
