--- a/css-bootstrap/dropdown.css
+++ b/css-bootstrap/dropdown.css
@@ -67,6 +67,8 @@
 }
 
 .dropdown-submenu.pull-left > .dropdown-menu {
+  left: 0;
+  margin-left: 10px;
   -webkit-border-radius: 6px 0 6px 6px;
      -moz-border-radius: 6px 0 6px 6px;
           border-radius: 6px 0 6px 6px;
