css-bootstrap/combobox.css

--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -1,5 +1,8 @@
-// from https://github.com/danielfarrell/bootstrap-combobox
-
+/*
+ *
+ * From https://github.com/danielfarrell/bootstrap-combobox
+ *
+ */
 
 .combobox-container {
   margin-bottom: 5px;
