css-bootstrap/combobox.css

--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -204,6 +204,6 @@
    background-image: none;
 }
 
-.roo-combbox-tickable .select2-result label {
+.roo-combobox-tickable .select2-result label {
     width: 100%;
 }
