--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -216,3 +216,7 @@ select2-container-multi .dropdown-menu .active {
     background: #3875d7 !important;
     color: #fff !important;
 }
+
+select2-container-multi .dropdown-menu .select2-result checkbox {
+    margin: 0;
+}
