css-bootstrap/combobox.css

--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -208,6 +208,10 @@
     width: 100%;
 }
 
+.dropdown-menu {
+  z-index: 10002 !important;
+}
+
 .select2-container-multi .dropdown-menu .select2-result .checkbox {
     margin-top: 0px;
     margin-bottom: 0px;
