css-bootstrap/combobox.css

--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -212,6 +212,10 @@
   z-index: 10002 !important;
 }
 
+.dropdown-menu .checkbox label {
+    width: 100%;
+}
+
 .select2-container-multi .dropdown-menu .select2-result .checkbox {
     margin-top: 0px;
     margin-bottom: 0px;
