--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -177,6 +177,7 @@
 
 .dropdown-menu .select2-result {
     padding: 3px 7px 4px;
+    height: 20px;
     margin: 0;
     cursor: pointer;
     min-height: 1em;
