--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -224,3 +224,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
 }
+.dropdown-menu .select2-result .checkbox {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
