--- a/css-bootstrap/combobox.css
+++ b/css-bootstrap/combobox.css
@@ -169,6 +169,7 @@
 
 .dropdown-menu .active {
     background: #3875d7;
+    color: #fff;
 }
 
 .dropdown-menu .active label{
@@ -177,7 +178,6 @@
 
 .dropdown-menu .select2-result {
     padding: 3px 7px 4px;
-
     margin: 0;
     cursor: pointer;
     min-height: 1em;
