--- a/css/grid.css
+++ b/css/grid.css
@@ -432,6 +432,12 @@ select.x-grid-editor{
 }
 */
 
+/*fade out effect by Michael*/
+.fadeout {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
+}
 
 
 /* 
