--- a/css/grid.css
+++ b/css/grid.css
@@ -541,3 +541,10 @@ select.x-grid-editor{
     border-bottom: 20px solid #fcfcfc;
     
 }
+
+/*fade out effect by Michael*/
+.x-grid-row-fadeout {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 3s, opacity 3s linear;
+}
