--- a/css-bootstrap/select2.css
+++ b/css-bootstrap/select2.css
@@ -441,12 +441,10 @@ disabled look for disabled choices in the results dropdown
     height: 1%;
     margin: 0;
     padding: 0;
-    position: relative;
-
+    /*position: relative;*/
     border: 1px solid #aaa;
     cursor: text;
     overflow: hidden;
-
     background-color: #fff;
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(1%, #eee), color-stop(15%, #fff));
     background-image: -webkit-linear-gradient(top, #eee 1%, #fff 15%);
@@ -643,4 +641,10 @@ html[dir="rtl"] .select2-search-choice-close {
     .select2-search input {
         background-position: 100% -21px !important;
     }
+}
+
+.has-error .select2-choices {
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
