--- a/css-bootstrap/sticky-footer.css
+++ b/css-bootstrap/sticky-footer.css
@@ -1,28 +1,28 @@
 /*html, */
 
 
-body.bootstrap-sticky {
-    height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
-}
-/* Wrapper for page content to push down footer */
-.bootstrap-sticky-wrap {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    /* Negative indent footer by it's height */
-    margin: 0 auto -60px;
-}
 
-/* Set the fixed height of the footer here */
-.bootstrap-sticky-push,
-.bootstrap-sticky-footer {
-    height: 60px;
+/* Sticky footer styles
+-------------------------------------------------- */
+html.bootstrap-sticky {
+  position: relative;
+  min-height: 100%;
+}
+html.bootstrap-sticky body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
 .bootstrap-sticky-footer {
-    background-color: #eee;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
+
+  
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
     .bootstrap-sticky-footer {
@@ -32,3 +32,5 @@ body.bootstrap-sticky {
         padding-right: 20px;
     }
 }
+
+
