css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -166,3 +166,9 @@
     border-color: #5cb85c; }
 .radio-success input[type="radio"]:checked + label::after {
     background-color: #5cb85c; }
+
+.checkbox.checkbox-inline,
+.radio.radio-inline
+{
+    margin-top: 0;
+}
