css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -168,7 +168,6 @@
     background-color: #5cb85c; }
 
 .checkbox.checkbox-inline,
-.radio.radio-inline
-{
+.radio.radio-inline {
     margin-top: 0;
 }
