--- a/css/date.css
+++ b/css/date.css
@@ -189,7 +189,7 @@ table.x-date-inner {
     display: none;
     position: absolute;
     top: 0;
-    left 0;
+    left: 0;
      
 }
 .x-date-mp table {
