--- a/css/button.css
+++ b/css/button.css
@@ -40,7 +40,7 @@
 .x-btn-right i 
 {
     display: block;
-    overflow: hidden
+    overflow: hidden;
     width: 3px;
     line-height: 1px;
     font-size: 1px;
