--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -146,8 +146,10 @@
 .radio-danger input[type="radio"]:checked + label::after {
     background-color: #d9534f; }
 
-.radio-info input[type="radio"] + label::after {
-    background-color: #5bc0de; }
+.radio-info input[type="radio"] + label::after
+{
+    background-color: #5bc0de !important;
+}
 .radio-info input[type="radio"]:checked + label::before {
     border-color: #5bc0de; }
 .radio-info input[type="radio"]:checked + label::after {
