--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -97,7 +97,7 @@
     margin-left: -20px;
     border: 1px solid #cccccc;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #fff !important;
     -webkit-transition: border 0.15s ease-in-out;
     -o-transition: border 0.15s ease-in-out;
     transition: border 0.15s ease-in-out; }
