--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -148,7 +148,7 @@
 
 .radio-info input[type="radio"] + label::after
 {
-    background-color: #5bc0de !important;
+    background-color: #5bc0de ;
 }
 .radio-info input[type="radio"]:checked + label::before {
     border-color: #5bc0de; }
