--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -100,7 +100,8 @@
     background-color: #fff !important;
     -webkit-transition: border 0.15s ease-in-out;
     -o-transition: border 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out; }
+    transition: border 0.15s ease-in-out;
+}
 .radio label::after {
     display: inline-block;
     position: absolute;
@@ -119,7 +120,8 @@
     -webkit-transition: -webkit-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
     -moz-transition: -moz-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
     -o-transition: -o-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
-    transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); }
+    transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
+}
 .radio input[type="radio"] {
     display: none; }
 .radio input[type="radio"]:checked + label::after {
