--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -86,7 +86,8 @@
 .radio label {
     display: inline-block;
     position: relative;
-    padding-left: 5px; }
+    padding-left: 5px;
+}
 .radio label::before {
     content: "";
     display: inline-block;
@@ -97,7 +98,7 @@
     margin-left: -20px;
     border: 1px solid #cccccc;
     border-radius: 50%;
-    background-color: #fff !important;
+    background-color: #fff !important; /* this is broken on firefox < 13 */
     -webkit-transition: border 0.15s ease-in-out;
     -o-transition: border 0.15s ease-in-out;
     transition: border 0.15s ease-in-out;
@@ -151,6 +152,11 @@
 .radio-info input[type="radio"] + label::after
 {
     background-color: #5bc0de ;
+}
+
+.radio-info input[type="radio"] + label::before
+{
+    background-color: #fff;
 }
 .radio-info input[type="radio"]:checked + label::before {
     border-color: #5bc0de; }
