css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -149,6 +149,7 @@
 .radio-danger input[type="radio"]:checked + label::after {
     background-color: #d9534f; }
 
+/*
 .radio-info input[type="radio"] + label::after
 {
     background-color: #5bc0de ;
@@ -164,6 +165,10 @@
 .radio-info input[type="radio"]:checked + label::after {
     background-color: #5bc0de;
     }
+    
+    */
+    
+    
 
 .radio-warning input[type="radio"] + label::after {
     background-color: #f0ad4e;
