--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -130,15 +130,17 @@
 }
 .radio input[type="radio"] {
     display: none;
-    }
+}
+
 .radio input[type="radio"]:checked + label::after {
     -webkit-transform: scale(1, 1);
     -ms-transform: scale(1, 1);
     -o-transform: scale(1, 1);
-    transform: scale(1, 1); }
+    transform: scale(1, 1);
+    }
 .radio input[type="radio"]:disabled + label {
     opacity: 0.65;
-    }
+}
 .radio input[type="radio"]:disabled + label::before {
     cursor: not-allowed;
 }
