--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -153,7 +153,7 @@
 }
 .radio-primary input[type="radio"]:checked + label::before {
     border-color: #428bca;
-     background-color: #428bca;
+    
 }
 .radio-primary input[type="radio"]:checked + label::after {
     background-color: #428bca;
@@ -176,6 +176,7 @@
 
 .radio-info input[type="radio"]:checked + label::before {
     border-color: #5bc0de ;
+    background-color: #5bc0de ;
     }
 .radio-info input[type="radio"]:checked + label::after {
     background-color: #5bc0de;
