css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -114,8 +114,8 @@
     content: " ";
     width: 5px;
     height: 5px;
-    left: 3px;
-    top: 3px;
+    left: 6px;
+    top: 6Px;
     margin-left: -20px;
     border-radius: 50%;
     background-color: #555555;
