css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -115,7 +115,7 @@
     width: 5px;
     height: 5px;
     left: 6px;
-    top: 6Px;
+    top: 6px;
     margin-left: -20px;
     border-radius: 50%;
     background-color: #555555;
