--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -64,14 +64,13 @@
     border-color: #d9534f; }
 .checkbox-danger input[type="checkbox"]:checked + label::after {
     color: #fff; }
- 
+
 .checkbox-info input[type="checkbox"]:checked + label::before {
     background-color: #5bc0de;
     border-color: #5bc0de; }
 .checkbox-info input[type="checkbox"]:checked + label::after {
     color: #fff; }
 
- 
 .checkbox-warning input[type="checkbox"]:checked + label::before {
     background-color: #f0ad4e;
     border-color: #f0ad4e; }
@@ -87,12 +86,7 @@
 .radio label {
     display: inline-block;
     position: relative;
-    padding-left: 5px;
-}
-
-/* before is the fill circle? */
-/* after is the inner circle */
-
+    padding-left: 5px; }
 .radio label::before {
     content: "";
     display: inline-block;
@@ -103,19 +97,18 @@
     margin-left: -20px;
     border: 1px solid #cccccc;
     border-radius: 50%;
-    background-color: #fff !important; /* this is broken on firefox < 13 */
+    background-color: #fff;
     -webkit-transition: border 0.15s ease-in-out;
     -o-transition: border 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out;
-}
+    transition: border 0.15s ease-in-out; }
 .radio label::after {
     display: inline-block;
     position: absolute;
     content: " ";
-    width: 5px;
-    height: 5px;
-    left: 6px;
-    top: 6px;
+    width: 11px;
+    height: 11px;
+    left: 3px;
+    top: 3px;
     margin-left: -20px;
     border-radius: 50%;
     background-color: #555555;
@@ -126,84 +119,53 @@
     -webkit-transition: -webkit-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
     -moz-transition: -moz-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
     -o-transition: -o-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
-    transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
-}
+    transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); }
 .radio input[type="radio"] {
-    display: none;
-    }
+    display: none; }
 .radio input[type="radio"]:checked + label::after {
     -webkit-transform: scale(1, 1);
     -ms-transform: scale(1, 1);
     -o-transform: scale(1, 1);
     transform: scale(1, 1); }
 .radio input[type="radio"]:disabled + label {
-    opacity: 0.65;
-    }
+    opacity: 0.65; }
 .radio input[type="radio"]:disabled + label::before {
-    cursor: not-allowed;
-}
-
-.radio input[type="radio"] + label::after {
-     background-color: #fff ; /* as firefox ignores the one above.. */
-}
-
+    cursor: not-allowed; }
 
 .radio-primary input[type="radio"] + label::after {
-    background-color: #428bca;
-}
+    background-color: #428bca; }
 .radio-primary input[type="radio"]:checked + label::before {
-    border-color: #428bca;
-    
-}
+    border-color: #428bca; }
 .radio-primary input[type="radio"]:checked + label::after {
-    background-color: #428bca;
-}
+    background-color: #428bca; }
 
 .radio-danger input[type="radio"] + label::after {
-    background-color: #d9534f;
-}
+    background-color: #d9534f; }
 .radio-danger input[type="radio"]:checked + label::before {
-    border-color: #d9534f;
-}
+    border-color: #d9534f; }
 .radio-danger input[type="radio"]:checked + label::after {
-    background-color: #d9534f;
-}
- 
-.radio-info input[type="radio"] + label::after
-{
-    background-color: #5bc0de ;
-}
+    background-color: #d9534f; }
 
+.radio-info input[type="radio"] + label::after {
+    background-color: #5bc0de; }
 .radio-info input[type="radio"]:checked + label::before {
-    border-color: #5bc0de ;
-    }
+    border-color: #5bc0de; }
 .radio-info input[type="radio"]:checked + label::after {
-    background-color: #5bc0de;
-    }
-    
-    
-    
-    
+    background-color: #5bc0de; }
 
 .radio-warning input[type="radio"] + label::after {
-    background-color: #f0ad4e;
-    }
+    background-color: #f0ad4e; }
 .radio-warning input[type="radio"]:checked + label::before {
-    border-color: #f0ad4e;
-    }
+    border-color: #f0ad4e; }
 .radio-warning input[type="radio"]:checked + label::after {
-    background-color: #f0ad4e;
-    }
+    background-color: #f0ad4e; }
 
 .radio-success input[type="radio"] + label::after {
-    background-color: #5cb85c;
-    }
+    background-color: #5cb85c; }
 .radio-success input[type="radio"]:checked + label::before {
-    border-color: #5cb85c;
-    }
+    border-color: #5cb85c; }
 .radio-success input[type="radio"]:checked + label::after {
-    background-color: #5cb85c;
-}
+    background-color: #5cb85c; }
 
 .checkbox.checkbox-inline,
 .radio.radio-inline {
