--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -116,7 +116,7 @@
     top: 3px;
     margin-left: -20px;
     border-radius: 50%;
-    background-color: #555555; /* this is a default black circle */
+    background-color: #fff; /* this is a default black circle */
     -webkit-transform: scale(0, 0);
     -ms-transform: scale(0, 0);
     -o-transform: scale(0, 0);
@@ -127,12 +127,15 @@
     transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
     }
 .radio input[type="radio"] {
-    display: none; }
+    display: none;
+}
 .radio input[type="radio"]:checked + label::after {
     -webkit-transform: scale(1, 1);
     -ms-transform: scale(1, 1);
     -o-transform: scale(1, 1);
-    transform: scale(1, 1); }
+    transform: scale(1, 1);
+    background-color: #555555;
+}
 .radio input[type="radio"]:disabled + label {
     opacity: 0.65; }
 .radio input[type="radio"]:disabled + label::before {
