css-bootstrap/checkbox.css

--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -142,7 +142,7 @@
     cursor: not-allowed; }
 
 .radio-primary input[type="radio"] + label::after {
-    background-color: #428bca; }
+    background-color: #fff; }
 .radio-primary input[type="radio"]:checked + label::before {
     border-color: #428bca; }
 .radio-primary input[type="radio"]:checked + label::after {
@@ -166,14 +166,14 @@
     background-color: #5bc0de; }
 
 .radio-warning input[type="radio"] + label::after {
-    background-color: #f0ad4e; }
+    background-color: #fff; }
 .radio-warning input[type="radio"]:checked + label::before {
     border-color: #f0ad4e; }
 .radio-warning input[type="radio"]:checked + label::after {
     background-color: #f0ad4e; }
 
 .radio-success input[type="radio"] + label::after {
-    background-color: #5cb85c; }
+    background-color: #fff; }
 .radio-success input[type="radio"]:checked + label::before {
     border-color: #5cb85c; }
 .radio-success input[type="radio"]:checked + label::after {
