--- a/css-bootstrap/checkbox.css
+++ b/css-bootstrap/checkbox.css
@@ -116,7 +116,7 @@
     top: 3px;
     margin-left: -20px;
     border-radius: 50%;
-    background-color: #fff; /* this is a default black circle */
+    background-color: #fff; 
     -webkit-transform: scale(0, 0);
     -ms-transform: scale(0, 0);
     -o-transform: scale(0, 0);
