--- a/css-bootstrap/roojs-bootstrap-debug.css
+++ b/css-bootstrap/roojs-bootstrap-debug.css
@@ -2234,7 +2234,7 @@ html[dir="rtl"] .select2-container-multi .select2-choices li
     border: 0;
     -webkit-box-shadow: none;
             box-shadow: none;
-    background-color: transparent !important;
+    background: transparent !important;
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
