css-bootstrap/bootstrap.css

--- a/css-bootstrap/bootstrap.css
+++ b/css-bootstrap/bootstrap.css
@@ -6070,7 +6070,8 @@ button.close {
     -webkit-transition: -webkit-transform .6s ease-in-out;
          -o-transition:      -o-transform .6s ease-in-out;
             transition:         transform .6s ease-in-out;
-
+            -moz-transition: -moz-transform .6s ease-in-out;
+            
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
     -webkit-perspective: 1000;
