--- a/css-bootstrap/bootstrap.css
+++ b/css-bootstrap/bootstrap.css
@@ -6081,12 +6081,14 @@ button.close {
   .carousel-inner > .item.active.right {
     left: 0;
     -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transition: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
   }
   .carousel-inner > .item.prev,
   .carousel-inner > .item.active.left {
     left: 0;
     -webkit-transform: translate3d(-100%, 0, 0);
+    -moz-transition: translate3d(-100%, 0, 0);
             transform: translate3d(-100%, 0, 0);
   }
   .carousel-inner > .item.next.left,
@@ -6094,6 +6096,7 @@ button.close {
   .carousel-inner > .item.active {
     left: 0;
     -webkit-transform: translate3d(0, 0, 0);
+    -moz-transition: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
   }
 }
